# mystery-movie-notifier

./: .env.example  .gitignore  README.md  database.go  docker-compose.nas.yml  docker-compose.override.yml.example  docker-compose.yml  dockerfile  go.mod  main.go  sms.go
infra/: package-lock.json
infra/lib/: infra-stack.ts
services/: Cargo.toml  dockerfile  go.mod
services/notifier/: Cargo.toml  README.md
services/processor/: Cargo.toml  README.md
services/retriever/: Cargo.toml  README.md
services/src/: main.rs
